progetto_tesi/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  ports:
    - name: app-port
      port: 8080
      targetPort: 8080
  selector:
    app: app
  type: ClusterIP
