progetto_tesi/crudapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudapp-svc
spec:
  selector:
    app: crudapp
  ports:
    - port: 8080
      targetPort: 5000
  type: LoadBalancer
